Fixed styling overflow bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,6 @@ body {
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
   background-color: #FAFAFA;
-  overflow: hidden;
 
   button {
     display: inline-block;
